# guillotina_elasticsearch

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  Makefile  README.rst  VERSION  buildout.cfg  config-opendistro.json  config.json  docker-compose.yml  pyproject.toml  reindex.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
guillotina_elasticsearch/: __init__.py  api.py  connection.py  directives.py  events.py  exceptions.py  interfaces.py  manager.py  migration.py  parser.py  queries.py  reindex.py  schema.py  testing.py  utility.py  utils.py
guillotina_elasticsearch/commands/: fields.py  migrate.py  reindex.py  vacuum.py
guillotina_elasticsearch/tests/: _test_flaky.py  conftest.py  container.py  fixtures.py  package.py  test_catalog.py  test_connection.py  test_custom_index.py  test_indexer.py  test_migration.py  test_opendistro.py  test_package.py  test_parser.py  test_schema.py  test_search.py  test_vacuum.py  utils.py
pserver/elasticsearch/: __init__.py  api.json  api.py  configure.zcml  events.py  install.py  interfaces.py  manager.py  schema.py  testing.py  utility.py
pserver/elasticsearch/tests/: test_search.py
