[tool.poetry]
name = "guillotina_elasticsearch"
version = "6.1.0"
description = "elasticsearch catalog support for guillotina"
authors = ["Your Name <you@example.com>"]
license = "BSD-2-Clause"

[tool.poetry.dependencies]
python = "^3.7"
guillotina = "<6.1.0"
aioelasticsearch = ">0.5.0,<0.7.0"
aiohttp = "3.5.4"
yarl = "1.4.2"

[tool.poetry.dev-dependencies]
async-asgi-testclient = "^1.4.6"
black = "^20.8b1"
docker = "^4.4.0"
pytest = "<6.0.0"
pytest-asyncio = "^0.14.0"
pytest-cov = "^2.11.1"
pytest-docker-fixtures = "^1.3.11"
flake8 = "^3.8.4"
isort = "<5.0"
prometheus-client = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
